--- a/app/views/notices/show.html.erb
+++ b/app/views/notices/show.html.erb
@@ -1,7 +1,9 @@
 <%= render "devise/shared/header" %>
 
   <div class="notices-main">
-    <%= "お知らせテスト" %>
+    <div class="notice-main-word">
+      <%= "お知らせテスト" %>
+    </div>
     <% @notices.each do |notice| %>
     <div class="notices">
       <div class="notices-subjects">
