--- a/app/views/notices/new.html.erb
+++ b/app/views/notices/new.html.erb
@@ -26,9 +26,9 @@
 
         <%= f.collection_select(:genre_id, Genre.all, :id, :name, {},) %><br><br>
 
-        <%= f.text_area :subject, placeholder:"例) 件名", size: "40x2" %><br>
+        <%= f.text_area :subject, placeholder:"例) 件名", size: "40x2" %><br><br>
 
-        <%= f.text_area :notice, placeholder:"例) 内容", size: "80x20" %><br>
+        <%= f.text_area :notice, placeholder:"例) 内容", size: "80x20" %><br><br>
         <%= f.submit "保存する", class: "button" %>
         <% end %>
     </div>
