--- a/app/views/qas/new.html.erb
+++ b/app/views/qas/new.html.erb
@@ -21,9 +21,9 @@
     </div>
     <%= form_with model: @qa, local: true do |f|%>
       <%= f.collection_select(:genre_id, Genre.all, :id, :name, {}) %><br><br>
-      <%= f.text_area :subject, placeholder:"例) 件名", size: "40x2"  %><br>
-      <%= f.text_area :question, placeholder:"例) 質問", size: "80x20"  %><br>
-      <%= f.text_area :answer, placeholder:"例) 回答", size: "80x20"  %><br>
+      <%= f.text_area :subject, placeholder:"例) 件名", size: "40x2"  %><br><br>
+      <%= f.text_area :question, placeholder:"例) 質問", size: "80x20"  %><br><br>
+      <%= f.text_area :answer, placeholder:"例) 回答", size: "80x20"  %><br><br>
       <%= f.submit "保存する", class: "button" %>
     <% end %>
   </div>
