--- a/app/views/qas/new.html.erb
+++ b/app/views/qas/new.html.erb
@@ -9,6 +9,9 @@
         <div class="manual-a">
           <%= link_to "メインメニュー", root_path, class: "post" %>
         </div>
+        <div class="manual-a">
+          <%= link_to "Q&A一覧へ", qas_path, class: "post" %>
+        </div>
         <div class="manual-a"><br>
           <%= link_to "お知らせ追加", new_notice_path, class: "post" %>
         </div>
