--- a/app/assets/stylesheets/manuals.scss
+++ b/app/assets/stylesheets/manuals.scss
@@ -1,8 +1,17 @@
+.site-header{
+  background-color: #def7ff; 
+  width: 100%;
+  height: 10%;
+  border-bottom:solid;
+  border-color: rgb(142, 199, 246);
+  
+}
+
 .one_share {
   border-bottom:solid;
   border-color: rgb(142, 199, 246);
   font-weight: bold;
-  font-size: 30px;
+  font-size: 40px;
   padding-left: 10px;
   display: flex;
   justify-content: space-between;
@@ -89,19 +98,27 @@
   font-size: 20px;
 }
 
-.manual-body{
+.main{
+  background-color: #def7ff;
+}
+.notice-body{
   display: flex;
   height: 100vh;
 }
-
-.manual-side{
-  height: 100vh;
+.notice-side{
+  padding-top: 5px;
+  padding-left: 5px;
+  height: 100%;
   width: 200px;
   background-color: #def7ff;
   border-right:solid;
   border-color: rgb(142, 199, 246);
 }
-.manual-side-menu{
+.notice-a{
+  padding-left: 5px;
+}
+
+.notice-side-menu{
   font-size: 20px;
 }
 .manual-list{
