--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -11,21 +11,22 @@
 
     <div class="main">
     <% if user_signed_in? %>
-    <div class="manual-body">
+    <div class="notice-body">
       
-      <div class="manual-side">
-        <div class="manual-side-menu">
+      <div class="notice-side">
+        <div class="notice-side-menu">
           メニュー
         </div>
-        <div class="manual-a">
+        <div class="notice-a">
           <%= link_to "Q&A一覧へ", qas_path, class: "post" %>
         </div><br>
-        <div class="manual-a">
+        <div class="notice-a">
           <%= link_to "お知らせ追加", new_notice_path, class: "post" %>
         </div>
+        <div class="notice-a">
           <%= link_to "QA追加", new_qa_path, class: "post" %>
+        </div>
       </div>
-
       <div class="manual-list">
         <div class="notice-header-list">
           <span class="manual-list-menu">
