--- a/app/views/notices/new.html.erb
+++ b/app/views/notices/new.html.erb
@@ -3,21 +3,20 @@
  <div class="notice-main">
     <div class="notice-body">
       
-      <div class="manual-side">
-        <div class="manual-side-menu">
+      <div class="notice-side">
+        <div class="noticeside-menu">
           メニュー
         </div>
-        <div class="manual-a">
+        <div class="notice-a">
           <%= link_to "メインメニュー", root_path, class: "post" %>
         </div><br>
-        <div class="manual-a">
+        <div class="notice-a">
           <%= link_to "Q&A一覧へ", qas_path, class: "post" %>
         </div>
-
+        <div class="notice-a">
           <%= link_to "QA追加", new_qa_path, class: "post" %>
-      </div>
-
- 
+        </div>
+  </div>
     <div class="notices-new-main">
       <div class="notice-main-word">
         お知らせ入力画面
