--- a/app/views/qas/index.html.erb
+++ b/app/views/qas/index.html.erb
@@ -3,18 +3,18 @@
     <body>
       <div class="main">
         <% if user_signed_in? %>
-          <div class="manual-body">
-            <div class="manual-side">
-              <div class="manual-side-menu">
+          <div class="notice-body">
+            <div class="notice-side">
+              <div class="notice-side-menu">
                 メニュー
               </div>
-                <div class="manual-a">
+                <div class="notice-a">
                   <%= link_to "お知らせ一覧へ", root_path, class: "post" %>
                 </div><br>
-                  <div class="manual-a">
+                  <div class="notice-a">
                     <%= link_to "お知らせ追加", new_notice_path, class: "post" %>
                   </div>
-                  <div class="manual-a">
+                  <div class="notice-a">
                     <%= link_to "QA追加", new_qa_path, class: "post" %>
                   </div>
               </div>
