--- a/app/views/qas/new.html.erb
+++ b/app/views/qas/new.html.erb
@@ -2,17 +2,17 @@
  <div class="notice-main">
     <div class="notice-body">
       
-      <div class="manual-side">
-        <div class="manual-side-menu">
+      <div class="notice-side">
+        <div class="notice-side-menu">
           メニュー
         </div>
-        <div class="manual-a">
+        <div class="notice-a">
           <%= link_to "メインメニュー", root_path, class: "post" %>
         </div>
-        <div class="manual-a">
+        <div class="notice-a">
           <%= link_to "Q&A一覧へ", qas_path, class: "post" %>
         </div>
-        <div class="manual-a"><br>
+        <div class="noticea"><br>
           <%= link_to "お知らせ追加", new_notice_path, class: "post" %>
         </div>
           <%= link_to "QA追加", new_qa_path, class: "post" %>
