--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,54 +2,60 @@
 
 <div class="new-sessions-menu">
 
-<div class="new-sessions-menu-name">新規登録</div>
+  <div class="new-sessions-center">
+  <div class="new-sessions-menu-name">アカウントの作成</div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-<div class="new-sessions-center">
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="sessions-menu-word-a">
+        <%= f.label :メールアドレス %><br />
+      </div>
+      <div class="sessions-form-name">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "session-form" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :メールアドレス %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+        <div class="sessions-menu-word">
+          <%= f.label :パスワード %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> 文字以上)</em>
+          <% end %>
+        </div>
+        <div class="sessions-form-name">
+          <%= f.password_field :password, autocomplete: "new-password", class: "session-form" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :パスワード %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :パスワード　再確認用 %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-    <div class="field">
-      <label class="form-text">お名前(全角)</label>
-      <span class="indispensable">必須</span><br />
-      <%= f.text_area :last_name, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
-      <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %>
-  </div>
-
-      <div class="field">
-      <label class="form-text">お名前カナ(全角)</label>
-      <span class="indispensable">必須</span><br />
-      <%= f.text_area :last_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
-      <%= f.text_area :first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
+      <div class="sessions-menu-word">
+        <%= f.label :パスワード　再確認用 %>
+      </div>
+      <div class="sessions-form-name">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "session-form" %>
+      </div>
+        <div class="sessions-menu-word">
+          <label class="form-text">お名前(全角)</label>
+          <span class="indispensable">必須</span><br />
+        </div>
+        <div class="sessions-form-name">
+          <%= f.text_area :last_name, class:"input-name", id:"last-name", placeholder:"例) 山田", class: "session-form-name" %>
+          <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎", class: "session-form-name"  %>
+        </div>
+        <div class="sessions-menu-word">
+          <label class="form-text">お名前カナ(全角)</label>
+          <span class="indispensable">必須</span><br />
+        </div>
+        <div class="sessions-form-name">
+          <%= f.text_area :last_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ", class: "session-form-name"  %>
+          <%= f.text_area :first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ", class: "session-form-name"  %>
+        </div>
+          <div class="sessions-menu-word">
+        <label class="form-text">店舗名・部署名</label><br />
+        </div>
+        <div class="sessions-form-name">
+          <%= f.text_area :affiliation, placeholder:"例)店舗名・部署名", class: "session-form" %>
+        </div>
+    <div class="actions">
+      <%= f.submit "新規登録", class: "new-sessions-buttom" %>
     </div>
-
-     <div class="field">
-      <label class="form-text">店舗名・部署名</label><br />
-      <%= f.text_area :affiliation, placeholder:"例)店舗名・部署名" %>
-    </div><br />
-
-
-  <div class="actions">
-    <%= f.submit "新規登録" %>
+  <% end %>
   </div>
-<% end %>
- </div>
 </div>
 <%= render "devise/shared/footer" %>
