--- a/app/assets/stylesheets/manuals.scss
+++ b/app/assets/stylesheets/manuals.scss
@@ -4,7 +4,6 @@
   height: 10%;
   border-bottom:solid;
   border-color: rgb(142, 199, 246);
-  
 }
 .one_share {
   border-bottom:solid;
@@ -124,7 +123,7 @@
   color         : #000066;
   background    : #ffffff;
 }
-
+//ログイン前のTOP画面
 .main-menu {
   padding-top: 130px;
   padding-bottom: 30px;
@@ -132,17 +131,16 @@
   background-color: #def7ff;
 }
 .main-center{
-  padding-top: 60px;
+  padding-top: 80px;
   padding-bottom: 10px;
   margin: auto;
   border:solid;
   border-color: rgb(142, 199, 246);
-  height: 190px;
+  height: 170px;
   width: 170px;
   background-color: #def7ff;
   text-align: center;
 }
-
 .light-header{
   padding-right: 10px;
 }
