--- a/app/assets/stylesheets/manuals.scss
+++ b/app/assets/stylesheets/manuals.scss
@@ -175,26 +175,29 @@
 .main{
   background-color: #def7ff;
 }
+.notice-main{
+  background-color: #def7ff;
+}
 .notice-body{
   display: flex;
   height: 100vh;
 }
 .notice-side{
-  padding-top: 5px;
-  padding-left: 5px;
   height: 100%;
   width: 200px;
   background-color: #def7ff;
   border-right:solid;
   border-color: rgb(142, 199, 246);
 }
+.notice-side-menu{
+  font-size: 25px;
+  padding-left: 5px;
+}
 .notice-a{
+  font-size: 15px;
   padding-left: 5px;
 }
 
-.notice-side-menu{
-  font-size: 20px;
-}
 .manual-list{
   font-size: 20px;
   height: 100vh;
@@ -299,7 +302,6 @@
   border-color: rgb(142, 199, 246);
   height: 50px;
   background-color: #def7ff;
-  font-size: 20px;
 }
 
 //notice SHOW画面
@@ -341,7 +343,6 @@
 .notice-main-out{
   margin-bottom: 5px;
 }
-  
 .notice-text{
   margin-top: 20px;
   font-size: 20px;
