--- a/app/assets/stylesheets/manuals.scss
+++ b/app/assets/stylesheets/manuals.scss
@@ -1,12 +1,44 @@
+//リセットCSS
+html, body, h1, h2, h3, h4, ul, ol, dl, li, dt, dd, p, div, span, img, a, table, tr, th, td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-weight: normal;
+  font-size: 100%;
+  vertical-align:baseline;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+article, header, footer, aside, figure, figcaption, nav, section { 
+  display:block;
+}
+body {
+  line-height: 1;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+ol, ul {
+  list-style: none;
+  list-style-type: none;
+}
+.main{
+  background-color: #def7ff;
+}
+//header部分
 .site-header{
   width: 100%;
-  height: 800px;
+  height: 70px;
+  background-color: #def7ff;
+  font-size: 20px;
   border-bottom:solid;
   border-color: rgb(142, 199, 246);
 }
+
 .share-works {
   font-weight: bold;
   font-size: 30px;
+  padding-top: 10px;
   padding-left: 10px;
   display: flex;
   justify-content: space-between;
@@ -17,15 +49,11 @@
   font-size: 50px;
 }
 .light-header{
-  padding-top: 15px;
+  padding-top: 20px;
   padding-right: 15px;
   display: flex;
 }
-.site-header {
-  height: 70px;
-  background-color: #def7ff;
-  font-size: 20px;
-}
+
 .share-affiliation{
   padding-right: 15px;
 }
@@ -178,13 +206,16 @@
 .notice-main{
   background-color: #def7ff;
 }
-.notice-body{
-  display: flex;
-  height: 100vh;
-}
+
+//サイドメニュー
 .notice-side{
-  height: 100%;
-  width: 200px;
+  display: flex;
+}
+.notice-side-body{
+  padding-top: 10px;
+  padding-left: 5px;
+  height: calc(100vw - 70px);
+  width: 150px;
   background-color: #def7ff;
   border-right:solid;
   border-color: rgb(142, 199, 246);
@@ -194,14 +225,16 @@
   padding-left: 5px;
 }
 .notice-a{
+  padding-top: 3px;
   font-size: 15px;
-  padding-left: 5px;
+  padding-left: 10px;
 }
 
+//noticeお知らせ画面
 .manual-list{
   font-size: 20px;
-  height: 100vh;
-  width: 100%;
+  height: calc(100vw - 70px);
+  width: calc(100vw - 150px);
   background-color: #def7ff;
 }
 .manual-list-menu{
@@ -214,9 +247,9 @@
   padding-left: 5px;
 }
 .notice-header-list{
-  display: flex;
+  padding-left: 10px;
+  padding-top: 10px;
 }
-
 .container {
   margin: 20px 0;
   padding: 30px;
@@ -236,7 +269,7 @@
   padding-left: 10px;
 }
 .notice-main-word{
-  font-size: 20px;
+  font-size: 40px;
   padding-top: 5px;
   padding-left: 5px;
   margin-bottom: 5px;
@@ -307,58 +340,70 @@
 //notice SHOW画面
 .notices-main{
   padding-left: 10px;
+  display: flex;
   background-color: #def7ff;
-  height: 100vh;
+  height: calc(100vw - 70px);
+}
+.notices-title-main{
+  padding-top: 20px;
+  font-size: 20px;
 }
 .notice-main-word{
+  padding-top: 5px;
   font-size: 20px;
 }
 .notices-subjects{
+  padding-left: 5px;
   padding-top: 10px;
+  padding-bottom: 5px;
   font-size: 20px;
   color: rgb(161, 10, 10);
 }
 .notices-sub{
   margin-right: 10px;
-  display: flex;
+
   border-bottom:solid 1px;
   border-color: rgb(142, 199, 246);
 }
 .notice-show-two{
-  font-size: 15px;
+  font-size: 20px;
   margin-right: 10px;
   padding-left: 5px;
   padding-right: 5px;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
+  border-bottom:solid 1px;
+  border-color: rgb(142, 199, 246);
 }
-
 .notice-show-three{
-  font-size: 15px;
+  font-size: 20px;
   margin-right: 10px;
   padding-left: 5px;
-  padding-right: 5px;
   padding-top: 5px;
- 
   }
 .notice-main-out{
   margin-bottom: 5px;
 }
 .notice-text{
-  margin-top: 20px;
+  padding-top: 10px;
+  padding-left: 5px;
+  margin-top: 10px;
   font-size: 20px;
   color: rgb(7, 7, 176);
 }
 
-//qa回答画面
+//qa_show画面
+.qa-main{
+  padding-left: 10px;
+  background-color: #def7ff;
+  height: calc(100vw - 70px);
+}
 .qa-title-main{
   padding-top: 20px;
   font-size: 20px;
-  display: flex;
 }
 .qa-title{
   margin-right: 20px;
 }
-
 .qa-show-two{
   border-bottom:solid 1px;
   border-color: rgb(142, 199, 246);
@@ -378,6 +423,8 @@
   font-size: 20px;
   color: blue;
 }
+
+
 
 //meesage部分について
 .message-main{
@@ -420,14 +467,12 @@
   padding-top: 5px;
 
 }
-
 .message-comment-main{
   padding-top: 5px;
   padding-bottom: 20px;
   border-top:solid 1px;
   border-color: rgb(142, 199, 246);
 }
-
 .button{
   font-size: 15px;
   color: #ffffff; 
