--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -7,26 +7,13 @@
     </title>
   </head>
   <body>
+  <div class="main">
   <%= render "devise/shared/header" %>
 
-    <div class="main">
-    <% if user_signed_in? %>
+  <% if user_signed_in? %>
     <div class="notice-body">
-      
-      <div class="notice-side">
-        <div class="notice-side-menu">
-          メニュー
-        </div>
-        <div class="notice-a">
-          <%= link_to "Q&A一覧へ", qas_path, class: "post" %>
-        </div><br>
-        <div class="notice-a">
-          <%= link_to "お知らせ追加", new_notice_path, class: "post" %>
-        </div>
-        <div class="notice-a">
-          <%= link_to "QA追加", new_qa_path, class: "post" %>
-        </div>
-      </div>
+      <%= render "devise/shared/side_menu" %>
+
       <div class="manual-list">
         <div class="notice-header-list">
           <span class="manual-list-menu">
@@ -88,8 +75,8 @@
         </div>
       </div>
     <% end %>
-
+<%= render "devise/shared/footer" %>
     </div>
   </body>
-  <%= render "devise/shared/footer" %>
+  
 </html>
