--- a/app/views/notices/new.html.erb
+++ b/app/views/notices/new.html.erb
@@ -2,20 +2,7 @@
  <div class="notice-main">
   <div class="notice-body">
             
-            <div class="notice-side">
-                  <div class="notice-side-menu">
-                    メニュー
-                  </div>
-                  <div class="notice-a">
-                    <%= link_to "メインメニュー", root_path, class: "post" %>
-                  </div><br>
-                  <div class="notice-a">
-                    <%= link_to "Q&A一覧へ", qas_path, class: "post" %>
-                  </div>
-                  <div class="notice-a">
-                    <%= link_to "QA追加", new_qa_path, class: "post" %>
-                  </div>
-            </div>
+      <%= render "devise/shared/side_menu" %>
             
             <div class="notices-new-main">
                   <div class="notice-main-word">
