--- a/app/views/qas/index.html.erb
+++ b/app/views/qas/index.html.erb
@@ -4,21 +4,8 @@
       <div class="main">
         <% if user_signed_in? %>
           <div class="notice-body">
-            <div class="notice-side">
-              <div class="notice-side-menu">
-                メニュー
-              </div>
-                <div class="notice-a">
-                  <%= link_to "お知らせ一覧へ", root_path, class: "post" %>
-                </div><br>
-                  <div class="notice-a">
-                    <%= link_to "お知らせ追加", new_notice_path, class: "post" %>
-                  </div>
-                  <div class="notice-a">
-                    <%= link_to "QA追加", new_qa_path, class: "post" %>
-                  </div>
-              </div>
 
+            <%= render "devise/shared/side_menu" %>
                   <div class="manual-list">
                   <div class="notice-header-list">
                     <span class="manual-list-menu">
