--- a/app/views/qas/index.html.erb
+++ b/app/views/qas/index.html.erb
@@ -9,13 +9,13 @@
                   <div class="manual-list">
                   <div class="notice-header-list">
                     <span class="manual-list-menu">
-                      ポイントカードについてのQA
+                      Q&A一覧
                     </span>
-                      <div class="notice-list-menu-two">
+                      <%# <div class="notice-list-menu-two">
                       <%= form_with(model: @notice, local: true) do |f|%>
-                        <%= f.collection_select(:genre_id, Genre.all, :id, :name, {}) %><br>
-                      <% end %>
-                      </div>
+                        <%# <%= f.collection_select(:genre_id, Genre.all, :id, :name, {}) %><br>
+                      <%# <% end %>
+                      <%# </div> %>
                        </div>
                     <br>
 
