--- a/app/assets/stylesheets/manuals.scss
+++ b/app/assets/stylesheets/manuals.scss
@@ -34,7 +34,6 @@ ol, ul {
   border-bottom:solid;
   border-color: rgb(142, 199, 246);
 }
-
 .share-works {
   font-weight: bold;
   font-size: 30px;
@@ -49,17 +48,24 @@ ol, ul {
   font-size: 50px;
 }
 .light-header{
+  min-width: 430px;
   padding-top: 20px;
   padding-right: 15px;
   display: flex;
 }
 
 .share-affiliation{
-  padding-right: 15px;
+  min-width: 150px;
+  padding-right: 10px;
+}
+.header-name{
+  min-width: 150px;
 }
 .share-logout{
-  padding-left: 15px;
+  min-width: 100px;
+  padding-left: 10px;
 }
+
 //新規登録画面
 .new-sessions-menu {
   padding-top: 90px;
@@ -183,7 +189,7 @@ ol, ul {
   background-color: #def7ff;
 }
 .main-center{
-  padding-top: 80px;
+  padding-top: 60px;
   padding-bottom: 10px;
   margin: auto;
   border:solid 2px;
@@ -195,6 +201,7 @@ ol, ul {
 }
 .login-in{
   font-size: 20px;
+  padding-bottom: 5px;
 }
 .login-new{
   font-size: 20px;
@@ -280,52 +287,53 @@ ol, ul {
   margin-bottom: 5px;
 }
 .notice-main-in {
-  width: 160px;
+  min-width :210px;
   height: 20px;
   padding-left: 8px;
 }
 .notice-main-category {
-  width: 130px;
+  min-width: 125px;
   height: 20px;
   padding-left: 5px;
 }
 .notice-main-contents{
-  width: 300px;
+  min-width: 220px;
   height: 20px;
   padding-left: 5px;
 }
 .notice-main-author{
-  width: 110px;
+  min-width: 110px;
   height: 20px;
   padding-left: 5px;
 }
 .notice-side-one{
+  width: auto;
   margin-bottom: 5px;
   display: flex;
 }
 .notice-main-one{
-  width: 100wh;
+  min-width :190px;
   height: 20px;
   margin-left: 10px;
   margin-right: 10px;
   margin-top: 3px;
 }
 .notice-main-two{
-  width: 130px;
+  min-width: 130px;
   height: 20px;
   padding-left: 5px;
   font-size: 15px;
   margin-top: 3px;
 }
 .notice-main-three{
-  width: 300px;
+  min-width: 210px;
   height: 20px;
   font-size: 15px;
   margin-right: 10px;
   margin-top: 3px;
   }
 .notice-main-force{
-  width: 200px;
+  min-width: 200px;
   height: 20px;
   font-size: 15px;
 
