--- a/app/assets/stylesheets/notices.scss
+++ b/app/assets/stylesheets/notices.scss
@@ -116,15 +116,26 @@ ol, ul {
   background    : #ffffff;
 }
 .sessions-menu-word-a{
+  display: flex;
   text-align: left;
   padding-left: 39px;
 }
 .sessions-menu-word{
+  display: flex;
   text-align: left;
   padding-left: 40px;
 }
 .sessions-form-name{
-  padding-bottom: 10px;
+  padding-bottom: 4px;
+}
+.indispensable-a{
+  color: red;
+  padding-left: 10px;
+}
+.indispensable{
+  color: red;
+  padding-top: 4px;
+  padding-left: 10px;
 }
 //ログイン画面
 .login-menu {
@@ -152,7 +163,7 @@ ol, ul {
 .login-menu-word{
   text-align: left;
   padding-left: 32px;
-  width: 140px;
+  width: 150px;
 }
 .login-menu-pw{
   text-align: left;
