--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,7 @@
 
       <div class="sessions-menu-word-a">
         <%= f.label :メールアドレス %><br />
+        <span class="indispensable-a"> 必須</span>
       </div>
       <div class="sessions-form-name">
         <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "session-form" %>
@@ -18,6 +19,7 @@
           <%= f.label :パスワード %>
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> 文字以上)</em>
+          <span class="indispensable-a"> 必須</span>
           <% end %>
         </div>
         <div class="sessions-form-name">
@@ -26,13 +28,14 @@
 
       <div class="sessions-menu-word">
         <%= f.label :パスワード　再確認用 %>
+        <span class="indispensable-a"> 必須</span>
       </div>
       <div class="sessions-form-name">
         <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "session-form" %>
       </div>
         <div class="sessions-menu-word">
           <label class="form-text">お名前(全角)</label>
-          <span class="indispensable">必須</span><br />
+          <span class="indispensable"> 必須</span><br />
         </div>
         <div class="sessions-form-name">
           <%= f.text_area :last_name, class:"input-name", id:"last-name", placeholder:"例) 山田", class: "session-form-name" %>
@@ -40,14 +43,15 @@
         </div>
         <div class="sessions-menu-word">
           <label class="form-text">お名前カナ(全角)</label>
-          <span class="indispensable">必須</span><br />
+          <span class="indispensable"> 必須</span>
         </div>
         <div class="sessions-form-name">
           <%= f.text_area :last_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ", class: "session-form-name"  %>
           <%= f.text_area :first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ", class: "session-form-name"  %>
         </div>
           <div class="sessions-menu-word">
-        <label class="form-text">店舗名・部署名</label><br />
+        <label class="form-text">店舗名・部署名</label>
+        <span class="indispensable"> 必須</span>
         </div>
         <div class="sessions-form-name">
           <%= f.text_area :affiliation, placeholder:"例)店舗名・部署名", class: "session-form" %>
